--- a/src/WO/MainBundle/Resources/views/admin.html.twig
+++ b/src/WO/MainBundle/Resources/views/admin.html.twig
@@ -11,73 +11,61 @@
     {% block head %}{% endblock %}
 </head>
 <body>
-<ul class="nav nav-pills nav-stacked pull-right">
-    {% if is_granted('ROLE_SUPER_ADMIN') %}
-        <li >
-            <a href="{{ path("organizer_index") }}" class="">Belegungsplan</a>
-        </li>
-        <li >
-            <a href="{{ path("admin_user") }}" class="">Benutzer</a>
-        </li>
-        <li >
-            <a href="{{ path("admin_page") }}" class="">Seiten</a>
-        </li>
-        <li >
-            <a href="{{ path("admin_config") }}" >Konfiguration</a>
-        </li>
-    {% endif %}
-    <li><a class="btn btn-danger" href="{{ path("logout") }}" style="color: #ffffff">Logout</a></li>
-</ul>
     <!-- Fixed navbar -->
-    {#<nav class="navbar navbar-default navbar-fixed-top">#}
-        {#<div class="container-fluid">#}
-            {#<div class="navbar-header">#}
-                {#<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">#}
-                    {#<span class="sr-only">Navigation umschalten</span>#}
-                    {#<span class="icon-bar"></span>#}
-                    {#<span class="icon-bar"></span>#}
-                    {#<span class="icon-bar"></span>#}
-                {#</button>#}
-                {#<a class="navbar-brand" href="{{ path("admin_index") }}">Administration</a>#}
-            {#</div>#}
-            {#<div id="navbar" class="navbar-collapse collapse">#}
-                {#<ul class="nav navbar-nav">#}
-                    {#<li >#}
-                        {#<a href="{{ path("organizer_index") }}" class="">Belegungsplan</a>#}
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Navigation umschalten</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ path("admin_index") }}">Administration</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="{{ path("organizer_index") }}" class="">Belegungsplan</a>
+                    </li>
+                    <li>
+                        <a href="{{ path("admin_offer") }}" class="">Sonderangebote</a>
+                    </li>
+                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+                        <li>
+                            <a href="{{ path("admin_service") }}" class="">Anwendungen</a>
+                        </li>
+                        <li >
+                            <a href="{{ path("admin_user") }}" class="">Benutzer</a>
+                        </li>
+                        <li >
+                            <a href="{{ path("admin_config") }}" >Konfiguration</a>
+                        </li>
+                    {% endif %}
+                    {#<li class="dropdown">#}
+                        {#<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>#}
+                        {#<ul class="dropdown-menu" role="menu">#}
+                            {#<li><a href="#">Action</a></li>#}
+                            {#<li><a href="#">Another action</a></li>#}
+                            {#<li><a href="#">Something else here</a></li>#}
+                            {#<li class="divider"></li>#}
+                            {#<li class="dropdown-header">Nav header</li>#}
+                            {#<li><a href="#">Separated link</a></li>#}
+                            {#<li><a href="#">One more separated link</a></li>#}
+                        {#</ul>#}
                     {#</li>#}
-                    {#{% if is_granted('ROLE_SUPER_ADMIN') %}#}
-                        {#<li >#}
-                            {#<a href="{{ path("admin_user") }}" class="">Benutzer</a>#}
-                        {#</li>#}
-                        {#<li >#}
-                            {#<a href="{{ path("admin_page") }}" class="">Seiten</a>#}
-                        {#</li>#}
-                        {#<li >#}
-                            {#<a href="{{ path("admin_config") }}" >Konfiguration</a>#}
-                        {#</li>#}
-                    {#{% endif %}#}
-                    {#&#123;&#35;<li class="dropdown">&#35;&#125;#}
-                        {#&#123;&#35;<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>&#35;&#125;#}
-                        {#&#123;&#35;<ul class="dropdown-menu" role="menu">&#35;&#125;#}
-                            {#&#123;&#35;<li><a href="#">Action</a></li>&#35;&#125;#}
-                            {#&#123;&#35;<li><a href="#">Another action</a></li>&#35;&#125;#}
-                            {#&#123;&#35;<li><a href="#">Something else here</a></li>&#35;&#125;#}
-                            {#&#123;&#35;<li class="divider"></li>&#35;&#125;#}
-                            {#&#123;&#35;<li class="dropdown-header">Nav header</li>&#35;&#125;#}
-                            {#&#123;&#35;<li><a href="#">Separated link</a></li>&#35;&#125;#}
-                            {#&#123;&#35;<li><a href="#">One more separated link</a></li>&#35;&#125;#}
-                        {#&#123;&#35;</ul>&#35;&#125;#}
-                    {#&#123;&#35;</li>&#35;&#125;#}
-                {#</ul>#}
-                {#<ul class="nav navbar-nav navbar-right">#}
-                    {#<li><a class="btn btn-danger" href="{{ path("logout") }}" style="color: #ffffff">Logout</a></li>#}
-                {#</ul>#}
-            {#</div><!--/.nav-collapse -->#}
-        {#</div>#}
-    {#</nav>#}
-<div class="container-fluid">
-    {% block body %}{% endblock %}
-</div>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a class="btn btn-danger" href="{{ path("logout") }}" style="color: #ffffff">Logout</a></li>
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
+    <div class="container-wrapper">
+        <div class="container-fluid">
+            {% block body %}{% endblock %}
+        </div>
+    </div>
 {% block javascripts %}
     <script src="{{ asset('bundles/wo/jquery/jquery-2.1.3.min.js') }}" type="text/javascript"></script>
     <script src="{{ asset('bundles/wo/bootstrap/js/bootstrap.min.js') }}" type="text/javascript"></script>
