--- a/src/WO/OrganizerBundle/Resources/views/Event/edit.html.twig
+++ b/src/WO/OrganizerBundle/Resources/views/Event/edit.html.twig
@@ -36,6 +36,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             {{ form_row(edit_form.info) }}
+                            <div id="autocomplete-container" style="position:absolute;"></div>
                         </div>
                     </div>
                     <div class="row">
