--- a/src/WO/MainBundle/Resources/views/admin.html.twig
+++ b/src/WO/MainBundle/Resources/views/admin.html.twig
@@ -34,6 +34,9 @@
                     <li>
                         <a href="{{ path("admin_offer") }}" class="">Sonderangebote</a>
                     </li>
+                    <li>
+                        <a href="{{ path("admin_notice") }}" class="">Sylke</a>
+                    </li>
                     {% if is_granted('ROLE_SUPER_ADMIN') %}
                         <li >
                             <a href="{{ path("admin_user") }}" class="">Benutzer</a>
