--- a/src/WO/OrganizerBundle/Resources/views/layout.html.twig
+++ b/src/WO/OrganizerBundle/Resources/views/layout.html.twig
@@ -30,6 +30,9 @@
     <li>
         <a href="{{ path("admin_offer") }}" class="">Sonderangebote</a>
     </li>
+    <li>
+        <a href="{{ path("admin_notice") }}" class="">Sylke</a>
+    </li>
 </ul>
     <!-- Fixed navbar -->
     {#<nav class="navbar navbar-default navbar-fixed-top">#}
