--- a/src/WO/MainBundle/Resources/views/Service/show.html.twig
+++ b/src/WO/MainBundle/Resources/views/Service/show.html.twig
@@ -9,6 +9,10 @@
                 <td>{{ entity.name }}</td>
             </tr>
             <tr>
+                <th>Abkürzung</th>
+                <td>{{ entity.shortname }}</td>
+            </tr>
+            <tr>
                 <th>Preis</th>
                 <td>{{ entity.price }}</td>
             </tr>
