--- a/src/WO/OrganizerBundle/Resources/views/Default/index.html.twig
+++ b/src/WO/OrganizerBundle/Resources/views/Default/index.html.twig
@@ -44,8 +44,8 @@
             </div>
         </div>
     </div>
-    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    </div>
+    <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+    <div class="modal fade" id="delete_modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
     <div class="overlay" style="display: none">
         <img class="loading" src="{{ asset('bundles/wo/images/loading.gif') }}">
     </div>
