--- a/src/WO/OrganizerBundle/Resources/views/Event/edit.html.twig
+++ b/src/WO/OrganizerBundle/Resources/views/Event/edit.html.twig
@@ -5,7 +5,7 @@
             <div class="modal-header">
                 <h4 class="modal-title">Termin bearbeiten</h4>
             </div>
-            {{  form_start(edit_form, {'attr': {'class': 'form'}}) }}
+            {{  form_start(edit_form, {'attr': {'class': 'form', 'data-check-url':  path("organizer_event_check_form")}}) }}
             <div class="modal-body">
                 <div class="te">
                     <div class="row">
