--- a/src/WO/MainBundle/Resources/views/Offer/index.html.twig
+++ b/src/WO/MainBundle/Resources/views/Offer/index.html.twig
@@ -3,7 +3,7 @@
 {% block body -%}
     <h1>Sonderangebots Liste</h1>
 
-    <table class="records_list">
+    <table class="records_list table">
         <thead>
             <tr>
                 <th>Anwendung</th>
