feste termin hinzugefügt

--- a/src/WO/OrganizerBundle/Resources/views/Event/edit.html.twig
+++ b/src/WO/OrganizerBundle/Resources/views/Event/edit.html.twig
@@ -63,8 +63,11 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             {{ form_row(edit_form.canceled) }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ form_row(edit_form.pinned) }}
                         </div>
                     </div>
                     {#{{ form_widget(form) }}#}
