--- a/src/WO/OrganizerBundle/Resources/views/Event/new.html.twig
+++ b/src/WO/OrganizerBundle/Resources/views/Event/new.html.twig
@@ -63,8 +63,11 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-12">
+                        <div class="col-md-6">
                             {{ form_row(form.canceled) }}
+                        </div>
+                        <div class="col-md-6">
+                            {{ form_row(form.pinned) }}
                         </div>
                     </div>
                     {#{{ form_widget(form) }}#}
